--- a/01_introduction.Rmd
+++ b/01_introduction.Rmd
@@ -5,3 +5,5 @@ The health and functioning of coastal marine ecosystems are under threat from a 
 Assessing human activities for an entire coastal region is generally done at broad spatial scales. For example, impact mapping and assessments for all of BC have been done with a 2 km+ spatial resolution [@ClarkeMurray2015], which exceeds the size of many seagrass meadows as well as the size of the shoreline region which may be locally impacting a meadow. In addition, many spatially distinct meadows may exist close together, where only a high resolution assessment of shoreline modifications could distinguish the potential impacts between them. Fine-scale assessments of impacts to seagrass exist for the BC coast, but these are typically done in detail for only a few meadows due to logistical constraints [@Iacarella2018; @Nagel2020].  
 
 The objective of this study is to map and quantify the shoreline modifications adjacent to all known seagrass meadows in the Strait of Georgia Bioregion of British Columbia. Eelgrass (*Zostera marina*, the dominant habitat-forming seagrass species) is a conservation priority in British Columbia [@DFO2019], and eelgrass meadows have been designated as Ecologically and Biologically Significant Areas (EBSA) due to their productivity, sensitivity, and support for biological diversity [@Rubidge2020]. Therefore, it is important to acquire information on human activities to predict impacts and categorize meadows by their degree of naturalness, as areas of high naturalness may be a priority for additional management and conservation efforts [@UNCBD2008]. While shoreline modifications do not represent all of the human activities potentially threatening seagrass, a high resolution dataset is currently needed and can complement other existing human impact data.
+
+TESTING
