--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -1,28 +1,153 @@
-@article{francis2011,
-	author = {R. I. C. C. Francis},
-	title = {Data weighting in statistical fisheries stock assessment models},
-  journal   = {Can. J. Fish. Aquat. Sci.},
-	year = {2011},
-	Volume = {68},
-	Number = {6},
-	Pages = {1124-1138},
+@Article{Halpern2019,
+  title = {Recent Pace of Change in Human Impact on the World’s Ocean},
+  author = {Benjamin S. Halpern and Melanie Frazier and Jamie Afflerbach and Julia S. Lowndes and Fiorenza Micheli and Casey O{\textquoteright}NAHara and Courtney Scarborough and Kimberly A. Selko},
+  date = {2019},
+  journaltitle = {Scientific Reports},
+  volume = {9},
+  number = {1},
+  pages = {1--8},
+  issn = {20452322},
+  doi = {10.1038/s41598-019-47201-9},
+  abstract = {Humans interact with the oceans in diverse and profound ways. The scope, magnitude, footprint and ultimate cumulative impacts of human activities can threaten ocean ecosystems and have changed over time, resulting in new challenges and threats to marine ecosystems. A fundamental gap in understanding how humanity is affecting the oceans is our limited knowledge about the pace of change in cumulative impact on ocean ecosystems from expanding human activities – and the patterns, locations and drivers of most significant change. To help address this, we combined high resolution, annual data on the intensity of 14 human stressors and their impact on 21 marine ecosystems over 11 years (2003–2013) to assess pace of change in cumulative impacts on global oceans, where and how much that pace differs across the ocean, and which stressors and their impacts contribute most to those changes. We found that most of the ocean (59\%) is experiencing significantly increasing cumulative impact, in particular due to climate change but also from fishing, land-based pollution and shipping. Nearly all countries saw increases in cumulative impacts in their coastal waters, as did all ecosystems, with coral reefs, seagrasses and mangroves at most risk. Mitigation of stressors most contributing to increases in overall cumulative impacts is urgently needed to sustain healthy oceans.},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\JIL68CHZ\\Halpern et al. - 2019 - Recent pace of change in human impact on the world’s ocean.pdf},
+}
+@Article{Todd2019,
+  title = {Towards an Urban Marine Ecology: Characterizing the Drivers, Patterns and Processes of Marine Ecosystems in Coastal Cities},
+  author = {Peter A. Todd and Eliza C. Heery and Lynette H.L. Loke and Ruth H. Thurstan and D. Johan Kotze and Christopher Swan},
+  date = {2019},
+  journaltitle = {Oikos},
+  pages = {1215--1242},
+  issn = {16000706},
+  doi = {10.1111/oik.05946},
+  abstract = {Human population density within 100 km of the sea is approximately three times higher than the global average. People in this zone are concentrated in coastal cities that are hubs for transport and trade ? which transform the marine environment. Here, we review the impacts of three interacting drivers of marine urbanization (resource exploitation, pollution pathways and ocean sprawl) and discuss key characteristics that are symptomatic of urban marine ecosystems. Current evidence suggests these systems comprise spatially heterogeneous mosaics with respect to artificial structures, pollutants and community composition, while also undergoing biotic homogenization over time. Urban marine ecosystem dynamics are often influenced by several commonly observed patterns and processes, including the loss of foundation species, changes in biodiversity and productivity, and the establishment of novel assemblages, ruderal species and synanthropes. Further, we discuss potential urban acclimatization and adaptation among marine taxa, interactive effects of climate change and marine urbanization, and ecological engineering strategies for enhancing urban marine ecosystems. By assimilating research findings across disparate disciplines, we aim to build the groundwork for urban marine ecology ? a nascent field; we also discuss research challenges and future directions for this new field as it advances and matures. Ultimately, all sides of coastal city design: architecture, urban planning, and civil and municipal engineering, will need to prioritize the marine environment if negative effects of urbanization are to be minimized. In particular, planning strategies that account for the interactive effects of urban drivers and accommodate complex system dynamics could enhance the ecological and human functions of future urban marine ecosystems. This article is protected by copyright. All rights reserved.},
+  keywords = {climate change,ecological engineering,ocean sprawl,pollution pathways,resource exploitation},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\U5JHNUJR\\Todd et al. - 2019 - Towards an urban marine ecology characterizing the drivers, patterns and processes of marine ecosystems in coastal.pdf},
+}
+@Article{Iacarella2018,
+  title = {Anthropogenic Disturbance Homogenizes Seagrass Fish Communities},
+  author = {Josephine C. Iacarella and Emily Adamczyk and Dan Bowen and Lia Chalifour and Aaron Eger and William Heath and Sibylla Helms and Margot Hessing-Lewis and Brian P.V. Hunt and Andrew MacInnis and Mary I. O'Connor and Clifford L.K. Robinson and Jennifer Yakimishyn and Julia K. Baum},
+  date = {2018},
+  journaltitle = {Global Change Biology},
+  volume = {24},
+  number = {5},
+  eprint = {29431880},
+  eprinttype = {pmid},
+  pages = {1904--1918},
+  issn = {13652486},
+  doi = {10.1111/gcb.14090},
+  abstract = {Anthropogenic activities have led to the biotic homogenization of many ecological communities, yet in coastal systems this phenomenon remains understudied. In particular, activities that locally affect marine habitat‐forming foundation species may perturb habitat and promote species with generalist, opportunistic traits, in turn affecting spatial patterns of biodiversity. Here, we quantified fish diversity in seagrass communities across 89 sites spanning 6° latitude along the Pacific coast of Canada, to test the hypothesis that anthropogenic disturbances homogenize (i.e., lower beta‐diversity) assemblages within coastal ecosystems. We test for patterns of biotic homogenization at sites within different anthropogenic disturbance categories (low, medium, and high) at two spatial scales (within and across regions) using both abundance‐ and incidence‐based beta‐diversity metrics. Our models provide clear evidence that fish communities in high anthropogenic disturbance seagrass areas are homogenized relative to those in low disturbance areas. These results were consistent across within‐region comparisons using abundance‐ and incidence‐based measures of beta‐diversity, and in across‐region comparisons using incidence‐based measures. Physical and biotic characteristics of seagrass meadows also influenced fish beta‐diversity. Biotic habitat characteristics including seagrass biomass and shoot density were more differentiated among high disturbance sites, potentially indicative of a perturbed environment. Indicator species and trait analyses revealed fishes associated with low disturbance sites had characteristics including stenotopy, lower swimming ability, and egg guarding behavior. Our study is the first to show biotic homogenization of fishes across seagrass meadows within areas of relatively high human impact. These results support the importance of targeting conservation efforts in low anthropogenic disturbance areas across land‐ and seascapes, as well as managing anthropogenic impacts in high activity areas.},
+  isbn = {1365-2486 (Electronic) 1354-1013 (Linking)},
+  keywords = {anthropogenic impact,beta-diversity,biotic homogenization,community turnover,marine fishes,nearshore,seagrass,species richness},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\AZVWLHWF\\Iacarella et al._2018_Anthropogenic disturbance homogenizes seagrass fish communities(4).pdf;C\:\\Users\\cristianij\\Zotero\\storage\\PZMYT3GP\\Iacarella et al. - 2018 - Anthropogenic disturbance homogenizes seagrass fish communities.pdf;C\:\\Users\\cristianij\\Zotero\\storage\\ZLMPDK5Q\\Iacarella et al._2018_Anthropogenic disturbance homogenizes seagrass fish communities(3).pdf},
 }
 
-@article{edwards2013,
-  author       = {A. M. Edwards and R. Haigh and P. J. Starr},
-  year         = {2014},
-  title        = {Pacific {Ocean Perch} ({\emph{Sebastes alutus}}) stock
-    assessment for the north and west coasts of {Haida Gwaii, British Columbia}},
-  journal   = {DFO Can. Sci. Advis. Sec. Res. Doc.},
-  volume    = {2013/092},
-  pages     = {vi + 126~p}
+@Article{Nahirnick2019,
+  title = {Long-{{Term Eelgrass Habitat Change}} and {{Associated Human Impacts}} on the {{West Coast}} of {{Canada}}},
+  author = {Natasha K. Nahirnick and Maycira Costa and Sarah Schroeder and Tara Sharma},
+  date = {2019},
+  journaltitle = {Journal of Coastal Research},
+  volume = {36},
+  number = {1},
+  pages = {30},
+  doi = {10.2112/jcoastres-d-18-00112.1},
+  abstract = {Eelgrass (Zostera marina) forms a critical nearshore marine habitat in temperate coastal ecosystems. For three small estuaries in the Southern Gulf Islands of British Columbia, changes in eelgrass area coverage and shape index (over the period of 1932-2016) were assessed using historical aerial photographs and unoccupied aerial system (UAS) imagery. In addition, changes in eelgrass area and shape index were evaluated in relation to landscape-level coastal environmental indicators, namely shoreline activities and alterations and residential housing density. All three eelgrass meadows showed a deteriorating trend in eelgrass condition; on average, eelgrass area coverage decreased by 45.1\%, while meadow complexity as indicated by the shape index increased by 66.3\%. Shoreline activities (boats, docks, log booms, and armoring) and residential housing density increased markedly at all sites over the study period and were strongly correlated to eelgrass area coverage and shape index. Changes in these landscape-level indicators over this period corroborate the observed decline in eelgrass habitat condition, because they suggest an overall deterioration of coastal environmental health in the Salish Sea due to increased use of the coastal zone, as well as declines in water quality due to urbanization.},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\LIF5FL95\\Nahirnick et al._2019_Long-Term Eelgrass Habitat Change and Associated Human Impacts on the West Coast of Canada.pdf},
+}
+@Article{Murphy2021a,
+  title = {From Coast to Coast to Coast : Ecology and Management of Seagrass Ecosystems across {{Canada}}},
+  author = {Grace E.P. Murphy and Jillian C Dunic and Emily M Adamczyk and Sarah J Bittick and Isabelle M C{\^o}t{\a'e} and John Cristiani and Emilie A Geissinger and Robert S Gregory and Heike K Lotze and Mary I O'Connor and Carlos A S Ara{\a'u}jo and Emily M Rubidge and Nadine D Templeman and Melisa C Wong},
+  date = {2021},
+  journaltitle = {Facets},
+  volume = {6},
+  pages = {1--41},
+  doi = {10.1139/facets-2020-0020},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\AL8FLWKV\\Murphy et al._2021_From coast to coast to coast ecology and management of seagrass ecosystems across Canada.pdf},
+}
+@Article{ClarkeMurray2015,
+  title = {Advancing Marine Cumulative Effects Mapping: {{An}} Update in {{Canada}}'s {{Pacific}} Waters},
+  author = {Cathryn {Clarke Murray} and Selina Agbayani and Hussein M. Alidina and Natalie C. Ban},
+  date = {2015},
+  journaltitle = {Marine Policy},
+  volume = {58},
+  pages = {71--77},
+  issn = {0308597X},
+  doi = {10.1016/j.marpol.2015.04.003},
+  abstract = {The rapidly progressing field of cumulative effects mapping is highly dependent on data quality and quantity. Availability of spatial data on the location of human activities on or affecting the ocean has substantially improved our understanding of potential cumulative effects. However, datasets for some activities remain poor and increased access to current, high resolution data are needed. Here we present an updated analysis of potential cumulative effects in Canada's Pacific marine waters. New, updated datasets and methodological improvements over the previous analysis were completed, including a new index for land-based effects on marine habitats, updated habitat classes and a modified treatment of vulnerability scores. The results show increased potential cumulative effects for the region. Fishing remains the biggest overall impact amongst marine activities, while land-based activities have the highest impact per unit area in affected ocean areas. Intertidal areas were the most affected habitat per unit area, while pelagic habitats had the highest total cumulative effect score. Regular updates of cumulative effects assessments will make them more useful for management, but these require regularly updated, high resolution datasets across all activity types, and automated, well-documented procedures to make them accessible to managers and policy-makers.},
+  isbn = {0308-597X},
+  keywords = {British Columbia,Canada,Cumulative effect,Cumulative impact mapping,Marine,Multiple stressors},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\HUFVDDQX\\Clarke Murray et al. - 2015 - Advancing marine cumulative effects mapping An update in Canada's Pacific waters.pdf;C\:\\Users\\cristianij\\Zotero\\storage\\KQ4AB6DC\\Clarke Murray et al._2015_Advancing marine cumulative effects mapping An update in Canada's Pacific waters(2).pdf;C\:\\Users\\cristianij\\Zotero\\storage\\SWWCSAYA\\Clarke Murray et al. - 2015 - Advancing marine cumulative effects mapping An update in Canada's Pacific waters.docx},
+}
+@Article{Iacarella2018,
+  title = {Anthropogenic Disturbance Homogenizes Seagrass Fish Communities},
+  author = {Josephine C. Iacarella and Emily Adamczyk and Dan Bowen and Lia Chalifour and Aaron Eger and William Heath and Sibylla Helms and Margot Hessing-Lewis and Brian P.V. Hunt and Andrew MacInnis and Mary I. O'Connor and Clifford L.K. Robinson and Jennifer Yakimishyn and Julia K. Baum},
+  date = {2018},
+  journaltitle = {Global Change Biology},
+  volume = {24},
+  number = {5},
+  eprint = {29431880},
+  eprinttype = {pmid},
+  pages = {1904--1918},
+  issn = {13652486},
+  doi = {10.1111/gcb.14090},
+  abstract = {Anthropogenic activities have led to the biotic homogenization of many ecological communities, yet in coastal systems this phenomenon remains understudied. In particular, activities that locally affect marine habitat‐forming foundation species may perturb habitat and promote species with generalist, opportunistic traits, in turn affecting spatial patterns of biodiversity. Here, we quantified fish diversity in seagrass communities across 89 sites spanning 6° latitude along the Pacific coast of Canada, to test the hypothesis that anthropogenic disturbances homogenize (i.e., lower beta‐diversity) assemblages within coastal ecosystems. We test for patterns of biotic homogenization at sites within different anthropogenic disturbance categories (low, medium, and high) at two spatial scales (within and across regions) using both abundance‐ and incidence‐based beta‐diversity metrics. Our models provide clear evidence that fish communities in high anthropogenic disturbance seagrass areas are homogenized relative to those in low disturbance areas. These results were consistent across within‐region comparisons using abundance‐ and incidence‐based measures of beta‐diversity, and in across‐region comparisons using incidence‐based measures. Physical and biotic characteristics of seagrass meadows also influenced fish beta‐diversity. Biotic habitat characteristics including seagrass biomass and shoot density were more differentiated among high disturbance sites, potentially indicative of a perturbed environment. Indicator species and trait analyses revealed fishes associated with low disturbance sites had characteristics including stenotopy, lower swimming ability, and egg guarding behavior. Our study is the first to show biotic homogenization of fishes across seagrass meadows within areas of relatively high human impact. These results support the importance of targeting conservation efforts in low anthropogenic disturbance areas across land‐ and seascapes, as well as managing anthropogenic impacts in high activity areas.},
+  isbn = {1365-2486 (Electronic) 1354-1013 (Linking)},
+  keywords = {anthropogenic impact,beta-diversity,biotic homogenization,community turnover,marine fishes,nearshore,seagrass,species richness},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\AZVWLHWF\\Iacarella et al._2018_Anthropogenic disturbance homogenizes seagrass fish communities(4).pdf;C\:\\Users\\cristianij\\Zotero\\storage\\PZMYT3GP\\Iacarella et al. - 2018 - Anthropogenic disturbance homogenizes seagrass fish communities.pdf;C\:\\Users\\cristianij\\Zotero\\storage\\ZLMPDK5Q\\Iacarella et al._2018_Anthropogenic disturbance homogenizes seagrass fish communities(3).pdf},
 }
 
-@article{swainbenoit2015,
- author = {Swain, D.P. and Benoît, H.P.},
- title = {Extreme increases in natural mortality prevent recovery of collapsed fish populations in a {N}orthwest {A}tlantic ecosystem},
- journal ={Mar. Ecol. Prog. Ser.},
- year = {2015},
- volume = {519},
- pages = {165-182}
+@Misc{Nagel2020,
+  title = {Application of a Coastal Human Impact Metric and Nitrogen Loading Model to 10 Eelgrass ( {{Zostera}} Marina ) Meadows in {{British Columbia}}},
+  author = {Elizabeth J Nagel and Grace E P Murphy and Julia Fast and Sarah Joy Bittick and M Adamczyk and Mary I O Connor and Melisa C Wong and Heike K Lotze},
+  date = {2020},
+  publisher = {{Fisheries and Oceans Canada}},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\B858IAPB\\Nagel et al._2020_Application of a coastal human impact metric and nitrogen loading model to 10 eelgrass ( Zostera marina ) meadows in B.pdf},
+}
+@Article{DFO2019,
+  title = {Design Strategies for the {{Northern Shelf Bioregion Marine Protected Area Network}}},
+  author = {{DFO}},
+  date = {2019},
+  journaltitle = {CSAS},
+  keywords = {Fisheries and Oceans Canada,Canadian Science Advisory Secretariat,Science Advisory Report},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\BT7JK7T8\\DFO_2019_Design strategies for the Northern Shelf Bioregion Marine Protected Area Network.pdf},
+}
+@Article{Rubidge2020,
+  title = {Assessment of Nearshore Features in the {{Northern Shelf Bioregion}} against Criteria for Determining {{Ecologically}} and {{Biologically Significant Areas}} ( {{EBSAs}} )},
+  author = {Emily Rubidge and Sharon Jeffery and Edward J Gregr and Katie S P Gale and Alejandro Frid},
+  date = {2020},
+  journaltitle = {DFO Canadian Science Advisory Secretariat},
+  publisher = {{Canadian Science Advisory Secretariat}},
+  keywords = {Canadian Science Advisory Secretariat,Fisheries and Oceans Canada,Research Document},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\QLFHGAQS\\Rubidge et al._2020_Assessment of nearshore features in the Northern Shelf Bioregion against criteria for determining Ecologically and B.pdf},
+}
+@Article{UNCBD2008,
+  title = {Decision Adopted by the Conference of the Parties to the Convention on Biological Diversity at Its Ninth Meeting},
+  author = {{UN CBD}},
+  date = {2008},
+  journaltitle = {UNEP/CBD/COP/DEC/IX/20},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\KKX8JXEK\\UN CBD_2008_Decision adopted by the conference of the parties to the convention on biological diversity at its ninth meeting.pdf},
+}
+@Article{Murphy2021a,
+  title = {From Coast to Coast to Coast : Ecology and Management of Seagrass Ecosystems across {{Canada}}},
+  author = {Grace E.P. Murphy and Jillian C Dunic and Emily M Adamczyk and Sarah J Bittick and Isabelle M C{\^o}t{\a'e} and John Cristiani and Emilie A Geissinger and Robert S Gregory and Heike K Lotze and Mary I O'Connor and Carlos A S Ara{\a'u}jo and Emily M Rubidge and Nadine D Templeman and Melisa C Wong},
+  date = {2021},
+  journaltitle = {Facets},
+  volume = {6},
+  pages = {1--41},
+  doi = {10.1139/facets-2020-0020},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\AL8FLWKV\\Murphy et al._2021_From coast to coast to coast ecology and management of seagrass ecosystems across Canada.pdf},
+}
+@Article{Cristiani2021,
+  title = {A {{Biophysical Model}} and {{Network Analysis}} of {{Invertebrate Community Dispersal Reveals Regional Patterns}} of {{Seagrass Habitat Connectivity}}},
+  author = {John Cristiani and Emily Rubidge and Coreen Forbes and Ben Moore-Maley and Mary I. O{\textquoteright}Connor},
+  date = {2021-08-31},
+  journaltitle = {Frontiers in Marine Science},
+  volume = {8},
+  pages = {1--19},
+  issn = {2296-7745},
+  doi = {10.3389/fmars.2021.717469},
+  url = {https://www.frontiersin.org/articles/10.3389/fmars.2021.717469/full},
+  abstract = {The dispersal of marine organisms is a critical process for the maintenance of biodiversity and ecosystem functioning across a seascape. Understanding the patterns of habitat connectivity that arise from the movement of multiple species can highlight the role of regional processes in maintaining local community structure. However, quantifying the probability and scale of dispersal for marine organisms remains a challenge. Here, we use a biophysical model to simulate dispersal, and we conduct a network analysis to predict connectivity patterns across scales for the community of invertebrates associated with seagrass habitat in British Columbia, Canada. We found many possible connections and few isolated habitat meadows, but the probability of most connections was low. Most habitat connections occurred within 3 days of dispersal time over short distances, indicating potential limits to long distance dispersal and little effect of species-specific dispersal abilities on the potential spatial extent of habitat connectivity. We then highlight the different roles that individual seagrass meadows can play in maintaining network connectivity. We also identify clusters of connected meadows and use these clusters to estimate the spatial scale of community dynamics. The connectivity patterns generated by our dispersal simulations highlight the importance of considering marine communities in their broad seascape context, with applications for the prioritization and conservation of habitat that maintains connectivity.},
+  issue = {August},
+  keywords = {biophysical modeling,community connectivity,community detection,eelgrass,eelgrass (Zostera marina),lagrangian,Lagrangian particle tracking,marine spatial planning,network analysis,particle tracking,salish sea,Salish Sea,zostera marina},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\Z736HPXR\\Cristiani et al._2021_A Biophysical Model and Network Analysis of Invertebrate Community Dispersal Reveals Regional Patterns of Seagrass.pdf},
 }
