--- a/csas-style/res-doc-french.sty
+++ b/csas-style/res-doc-french.sty
@@ -654,7 +654,7 @@ Ottawa ON K1A 0E6\\
 \includegraphics[scale=0.96]{\locRepo/images/recycle.png}
 
 \vspace{-1mm}
-\textcopyright\ Sa Majesté la Reine du chef du Canada, \rdYear{}\\
+\textcopyright\ Sa Majesté le Roi du chef du Canada, \rdYear{}\\
 ISSN 2292-4272\\
 ISBN~\rdISBN{} \hspace{5mm} N$^{\circ}$ cat.~\rdCatNo
 \end{center}
