--- a/csas-style/res-doc.sty
+++ b/csas-style/res-doc.sty
@@ -654,7 +654,7 @@ Ottawa ON K1A 0E6\\
 \includegraphics[scale=0.96]{\locRepo/images/recycle.png}
 
 \vspace{-1mm}
-\textcopyright\ Her Majesty the Queen in Right of Canada, \rdYear{}\\
+\textcopyright\ His Majesty the King in Right of Canada, \rdYear{}\\
 ISSN 1919-5044\\
 ISBN~\rdISBN{} \hspace{5mm} Cat.~No.~\rdCatNo
 \end{center}
