--- a/csas-style/tech-report-french.sty
+++ b/csas-style/tech-report-french.sty
@@ -381,7 +381,7 @@ par
 % Fourth page: Colophon
 \vspace*{\fill}
 \begin{center}
-\copyright{} Sa Majesté la Reine du Chef du Canada, \trYear{}\\
+\copyright{} Sa Majesté le Roi du Chef du Canada, \trYear{}\\
 N° de cat. Fs97-6/\trReportNum{}F-PDF \quad ISBN \trISBN{} \quad ISSN 1488-545X
 \end{center}
 \par
