--- a/csas-style/tech-report.sty
+++ b/csas-style/tech-report.sty
@@ -379,7 +379,7 @@ by
 % Fourth page: Colophon
 \vspace*{\fill}
 \begin{center}
-\copyright{} Her Majesty the Queen in Right of Canada, \trYear{}\\
+\copyright{} His Majesty the King in Right of Canada, \trYear{}\\
 Cat. No. Fs97-6/\trReportNum{}E-PDF \quad ISBN \trISBN{} \quad ISSN 1488-5379
 \end{center}
 \par
