--- a/02_methods.Rmd
+++ b/02_methods.Rmd
@@ -2,15 +2,22 @@
 
 ## Seagrass spatial data
 
-- Seagrass, eelgrass, japonica
-- Bioregions
-- Data sources (ref my paper here)
+Eelgrass (*Z. marina*) is the primary subtidal and intertidal meadow-forming seagrass in British Columbia. Meadows may also consist of the non-native seagrass, *Zostera japonica*, in the intertidal zone. Seagrass occurs to depths of 10 meters and can form meadows many km^2^ in size [@Murphy2021a]. We used a spatial dataset of seagrass in the Salish Sea compiled in @Cristiani2021, which consists of surveyed and modeled data from a variety of government and non-governmental sources. The dataset includes xyz meadows in the Strait of Georgia Bioregion as well as meadows in the southern portions of the Northern Shelf Bioregion and Southern Shelf Bioregion.
 
 ## Shoreline area
+
+Remember, the methods should be the most detailed part.
+
+
 
 - Justification (cite DFO reports, Iacarella, Nagel)
 - Adjusting seagrass meadows (or just generally say we created it at the nearest shoreline)
 - General geoprocessing steps
+
+We measured shoreline modifcations within at 100m buffer onto land from a seagrass meadow.
+
+...requires generating consistent buffers from onto land. The perimeter of the meadows, however, do not always abut directly to the shoreline due to different mapping accuracies and errors, thus resulting in slightly different buffer extents on to land. Aside from a few exceptions, the majority of meadows are adjacent to coastline and therefore to create consistent buffers we adjusted the perimeter of meadows to match the coastline using digitization tools in ArcGIS.
+
 
 ## Shoreline modifications
 
