--- a/index.Rmd
+++ b/index.Rmd
@@ -6,7 +6,7 @@ report_number: nnn
 author: |
   John M. Cristiani^1^
   Katherine H. Bannar-Martin^2^ and
-  Emily M. Rubidge^3^
+  Emily M. Rubidge^2^
 author_list: "Cristiani, J.C., Bannar-Martin, K.H, and Rubidge, E.M."
 region: Pacific Region
 french_region: Région du Pacifique
@@ -15,10 +15,9 @@ address: |
   ^1^Pacific Biological Station\
      Fisheries and Oceans Canada, 3190 Hammond Bay Road\
      Nanaimo, British Columbia, V9T 6N7, Canada\
-  ^2^Far, far away\
-     Another Galaxy\
-  ^3^Far, far away\
-     Another Galaxy     
+  ^2^Institute of Ocean Sciences\
+     Fisheries and Oceans Canada, 9860 W Saanich Road\
+     Sidney, British Columbia, V8L 4B2, Canada\
 french_address: |
   ^1^Station biologique du Pacifique\
      Pêches et Océans Canada, 3190 Hammond Bay Road\
@@ -69,7 +68,7 @@ knit: (function(input, ...) {
       })
 site: bookdown::bookdown_site
 link-citations: true
-bibliography: bib/refs_20220914.bib
+bibliography: bib/refs.bib
 # Any extra LaTeX code for the header:
 header-includes:
  - \usepackage{float}
