--- a/04_discussion.Rmd
+++ b/04_discussion.Rmd
@@ -13,3 +13,6 @@
 
 - some stuff from my thesis:
   - "managing seagrass habitat and associated species in a landscape context, in which patterns of distribution, dispersal, and impacts will interact to influence regional management strategies (Murphy et al. 2021b). Although eelgrass is declining globally (Dunic et al. 2021), eelgrass in nearby Puget Sound, Washington is stable and resilient overall, despite a significant increase in local human and climactic stressors (Shelton et al. 2016). Assessing the relevance of managing for human impacts in the Salish Sea will therefore require a deeper understanding of seagrass and invertebrate responses to stressors and the mechanisms (e.g., dispersal) that allow for resilience to these stressors. Ultimately, refining and validating our models will increase their utility and promote their incorporation into broader marine spatial planning efforts."
+
+# Data availability
+Link to github repo
