--- a/01_introduction.Rmd
+++ b/01_introduction.Rmd
@@ -1,6 +1,6 @@
 # Introduction
 
-The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, industrial and residential development, forestry, and shoreline hardening can create pressures on the marine environment. A modified shoreline may alter levels of sedimentation, nutrient runoff, pollution, and wave energy [@Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, these pressures may impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass would allow us to predict ecological impacts and understand seagrass ecosystem dynamics in a broader seascape context.
+The health and functioning of coastal marine ecosystems are under threat from a variety of human activities [@Halpern2019]. Coastal activities such as agriculture, industrial and residential development, forestry, and shoreline hardening can create pressures on the marine environment. A modified shoreline may alter levels of sedimentation, nutrient runoff, pollution, and wave energy [@Dethier2016; @Todd2019]. For coastal biogenic habitat in British Columbia such as seagrass, these pressures may impact seagrass productivity and survival, and thus impact the community of species that rely on seagrass [@Iacarella2018; @Murphy2021a; @Nahirnick2019]. Therefore, knowing the presence of shoreline modifications adjacent to seagrass meadows would allow us to predict ecological impacts and understand seagrass ecosystem dynamics in a broader seascape context.
 
 Assessing human activities for an entire coastal region is generally done at broad spatial scales. For example, impact mapping and assessments for all of BC have been done with a 2 km+ spatial resolution [@ClarkeMurray2015], which exceeds the size of many seagrass meadows as well as the size of the shoreline region which may be locally impacting a meadow. In addition, many spatially distinct meadows may exist close together, where only a high resolution assessment of shoreline modifications could distinguish the potential impacts between them. Fine-scale assessments of impacts to seagrass exist for the BC coast, but these are typically done in detail for only a few meadows due to logistical constraints [@Iacarella2018; @Nagel2020].  
 
