--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -151,3 +151,87 @@
   keywords = {biophysical modeling,community connectivity,community detection,eelgrass,eelgrass (Zostera marina),lagrangian,Lagrangian particle tracking,marine spatial planning,network analysis,particle tracking,salish sea,Salish Sea,zostera marina},
   file = {C\:\\Users\\cristianij\\Zotero\\storage\\Z736HPXR\\Cristiani et al._2021_A Biophysical Model and Network Analysis of Invertebrate Community Dispersal Reveals Regional Patterns of Seagrass.pdf},
 }
+@Article{Dethier2016,
+  title = {Multiscale Impacts of Armoring on {{Salish Sea}} Shorelines: {{Evidence}} for Cumulative and Threshold Effects},
+  author = {Megan N. Dethier and Wendel W. Raymond and Aundrea N. McBride and Jason D. Toft and Jeffery R. Cordell and Andrea S. Ogston and Sarah M. Heerhartz and Helen D. Berry},
+  date = {2016},
+  journaltitle = {Estuarine, Coastal and Shelf Science},
+  volume = {175},
+  pages = {106--117},
+  publisher = {{Elsevier Ltd}},
+  issn = {02727714},
+  doi = {10.1016/j.ecss.2016.03.033},
+  url = {http://dx.doi.org/10.1016/j.ecss.2016.03.033},
+  abstract = {Shoreline armoring is widespread in many parts of the protected inland waters of the Pacific Northwest, U.S.A, but impacts on physical and biological features of local nearshore ecosystems have only recently begun to be documented. Armoring marine shorelines can alter natural processes at multiple spatial and temporal scales; some, such as starving the beach of sediments by blocking input from upland bluffs may take decades to become visible, while others such as placement loss of armoring construction are immediate. We quantified a range of geomorphic and biological parameters at paired, nearby armored and unarmored beaches throughout the inland waters of Washington State to test what conditions and parameters are associated with armoring. We gathered identical datasets at a total of 65 pairs of beaches: 6 in South Puget Sound, 23 in Central Puget Sound, and 36 pairs North of Puget Sound proper. At this broad scale, demonstrating differences attributable to armoring is challenging given the high natural variability in measured parameters among beaches and regions. However, we found that armoring was consistently associated with reductions in beach width, riparian vegetation, numbers of accumulated logs, and amounts and types of beach wrack and associated invertebrates. Armoring-related patterns at lower beach elevations (further vertically from armoring) were progressively harder to detect. For some parameters, such as accumulated logs, there was a distinct threshold in armoring elevation that was associated with increased impacts. This large dataset for the first time allowed us to identify cumulative impacts that appear when increasing proportions of shorelines are armored. At large spatial and temporal scales, armoring much of a sediment drift cell may result in reduction of the finer grain-size fractions on beaches, including those used by spawning forage fish. Overall we have shown that local impacts of shoreline armoring can scale-up to have cumulative and threshold effects -- these should be considered when managing impacts to public resources along the coast.},
+  keywords = {Armoring,Detritus,Grain size,Gravel,Long-term changes,Threshold},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\35ISMUQJ\\Dethier et al._2016_Multiscale impacts of armoring on Salish Sea shorelines Evidence for cumulative and threshold effects.pdf},
+}
+@Report{Lemieux2004,
+  title = {{{PROCEEDINGS OF THE DFO}}/{{PSAT SPONSORED MARINE RIPARIAN EXPERTS WORKSHOP}}, {{TSAWWASSEN}}, {{BC}}, {{FEBRUARY}} 17-18, 2004},
+  author = {J.P Lemieux and J.S. Brennan and M. Farrell and Colin D. Levings and D. Myers},
+  date = {2004},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\D5KEDGDS\\Lemieux et al._2004_PROCEEDINGS OF THE DFOPSAT SPONSORED MARINE RIPARIAN EXPERTS WORKSHOP, TSAWWASSEN, BC, FEBRUARY 17-18, 2004.pdf},
+}
+
+@Article{Levings2001,
+  title = {Marine and Estuarine Riparian Habitats and Their Role in Coastal Ecosystems, {{Pacific}} Region},
+  author = {Colin Levings and Glen Jamieson},
+  date = {2001},
+  journaltitle = {Canadian Science Advisory Secretartiat},
+  pages = {41},
+  abstract = {This paper is an assessment of the fish habitat significance of a particular ecotone of the marine and estuarine shoreline in British Columbia- locations where aquatic habitat at higher tides merges into terrestrial habitat. Scientific data on these supralittoral areas, frequently called the "marine riparian" by managers are scarce in Pacific region. Habitat and ocean managers are dealing with uncertainty when assessing these areas in relation to forestry, urban development, and other industrial activities. There is evidence showing that unvegetated beach substrate in the marine riparian is used as spawning and incubation habitat for sandlance and surf smelt. Marine riparian is also recognized as rearing and migratory habitat for juvenile salmonids. Preliminary studies conducted at two locations in the Strait of Georgia in February and March 2001 showed that a variety of arthropods are potentially available as fish food from intact marine riparian habitats. The functional importance of marine riparian is likely to be related to food production, temperature regulation, wave energy absorption, and provision of structure as well as indirect ecological value. As an interim measure, based on the sparse available literature, we recommend that a site specific approach be taken to buffer zone widths to manage the marine riparian. Gravel, sand, or cobble beaches may be most susceptible to erosion and sediment sloughing from land, depending on backshore conditions. We also advise a careful review of the rationale, efficacy, and performance of the setback distances proposed in Clayoquot Sound and Puget Sound. Several focused research projects are recommended.},
+  isbn = {14804883},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\C74ZLBR5\\Levings, Jamieson_2001_Marine and estuarine riparian habitats and their role in coastal ecosystems, Pacific region.pdf},
+}
+@Article{hauxwell2003,
+  title = {Eelgrass {{Zostera}} Marina Loss in Temperate Estuaries: Relationship to Land-Derived Nitrogen Loads and Effect of Light Limitation Imposed by Algae},
+  shorttitle = {Eelgrass {{Zostera}} Marina Loss in Temperate Estuaries},
+  author = {J Hauxwell and J Cebri{\a'a}n and I Valiela},
+  date = {2003},
+  journaltitle = {Marine Ecology Progress Series},
+  shortjournal = {Mar. Ecol. Prog. Ser.},
+  volume = {247},
+  pages = {59--73},
+  issn = {0171-8630, 1616-1599},
+  doi = {10.3354/meps247059},
+  url = {http://www.int-res.com/abstracts/meps/v247/p59-73/},
+  urldate = {2022-10-05},
+  abstract = {In this paper, we explicitly link changes in community structure of estuarine primary producers to measured nitrogen loading rates from watersheds to estuaries, and quantify the relationship between nitrogen load, annual dynamics of algal growth and Zostera marina L. productivity, and overall eelgrass decline at the watershed-estuarine scale in estuaries of Waquoit Bay, Massachusetts, USA. Substantial eelgrass loss (80 to 96\% of bed area lost in the last decade) was found at loads of \textasciitilde 30 kg N ha–1 yr–1, and total disappearance at loads ≥ 60 kg N ha–1 yr–1. Rather than decreased eelgrass growth rates, we observed an exponential decrease in shoot densities and bed area (and subsequently, areal production) as nitrogen loads increased, suggesting that eelgrass decline in higher-nitrogen estuaries of the Waquoit system occurred largely via lack of recruitment or enhanced mortality of established shoots. Similar to the patterns observed in many other systems and the experimental results obtained in laboratories or mesocosms, the relationship we observed between nitrogen loads and eelgrass health within the Waquoit system was indirect: increased nitrogen stimulated growth and standing stocks of algal producers, that may have caused severe light limitation of eelgrass. From light budgets that considered water column, epiphyte, and macroalgal shading, we estimated chronic, severe light limitation to newly recruiting shoots in higher-nitrogen estuaries, due mainly to shading by a coexisting ≤15 cm macroalgal canopy. Two management recommendations aimed at eelgrass preservation emerge from this work. First, development and management of watersheds must be conducted such that land-derived nitrogen loading to estuaries is restricted. In the Waquoit Bay estuaries, for example, eelgrass is absent or rapidly disappearing from all but those receiving the lowest (≤15th percentile) loads. Second, shoot density and meadow area, rather than growth rates per shoot, seem to be adequate variables for routine monitoring of eelgrass health. We also show that the shift from eelgrass- to algae-dominated communities has important consequences for total system primary production and carbon and nitrogen cycling. Estimated total primary production by coastal assemblages in the Waquoit Bay system was 135\% higher in estuaries receiving relatively high versus low loads of land-derived nitrogen, suggesting important trophic and biogeochemical alterations to temperate estuarine ecosystems as a result of eutrophication.},
+  langid = {english},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\CK4HZ2ML\\Hauxwell et al. - 2003 - Eelgrass Zostera marina loss in temperate estuarie.pdf},
+}
+
+@Article{Quiros2017,
+  title = {Land Use Is a Better Predictor of Tropical Seagrass Condition than Marine Protection},
+  author = {T. E.Angela L. Quiros and Don Croll and Bernie Tershy and Miguel D. Fortes and Peter Raimondi},
+  date = {2017},
+  journaltitle = {Biological Conservation},
+  volume = {209},
+  pages = {454--463},
+  publisher = {{The Authors}},
+  issn = {00063207},
+  doi = {10.1016/j.biocon.2017.03.011},
+  url = {http://dx.doi.org/10.1016/j.biocon.2017.03.011},
+  abstract = {Effective coastal conservation requires a better understanding of how human activities on land may directly and indirectly affect adjacent marine communities. However, the relationship between terrestrial and marine systems has rarely been considered in terrestrial and marine reserve design. Seagrasses are affected by land-based activities due to their proximity to terrestrial systems and sensitivity to fluxes of terrestrially-derived organic and inorganic material. Our study examines how land use patterns adjacent to seagrass meadows influence the ecological integrity of seagrass using a suite of seagrass condition metrics on a landscape level across the Philippine archipelago. Using canonical correlation analysis, we measured the association between environmental variables (land use and seagrass abiotic conditions) with biotic variables (seagrass species richness and abundance). Terrestrial protection adjacent to seagrass meadows, defined as the absence of various anthropogenic land use perturbations, had significant positive effects on seagrass condition. The watershed area, and area of farmland and human development, had the most negative effect on seagrass condition. Using analysis of covariance and regression, we examined how marine protected area (MPA) establishment, size, and age, affected seagrass biotic conditions while holding environmental conditions constant. The relationship between biological and environmental canonical factors did not vary as a function of an MPA. This study provides evidence that land use is more important than marine protection for tropical seagrass condition. Our results demonstrate the complementary connection between land and sea, justifying the ‘ridge-to-reef’ approach in coastal conservation. Proper management of seagrasses should account for stewardship of the adjacent watersheds.},
+  keywords = {Canonical correlation analysis,Land to sea interactions,Philippines,Seagrass,Terrestrial and marine protected areas},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\WCG8MJCG\\Quiros et al._2017_Land use is a better predictor of tropical seagrass condition than marine protection.pdf},
+}
+
+@Report{vandermeulen2005,
+  title = {Assessing {{Marine Habitat Sensitivity}}: {{A}} Case Study with Eelgrass ({{Zostera}} Marina {{L}}.) and Kelps ({{Laminaria}}, {{Macrocystis}})},
+  author = {Herb Vandermeulen},
+  date = {2005},
+  pages = {57},
+  institution = {{DFO Canadian Science Advisory Secretariat, Fisheries and Oceans Canada}},
+  langid = {english},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\3KPX25ZR\\Vandermeulen - Évaluation de la sensibilité de l’habitat marin  .pdf},
+}
+@Article{Vandermeulen2012,
+  title = {Responses of {{Eelgrass}} ({{{\emph{Zostera}}}}{\emph{ Marina }}{{{\emph{L}}}}{\emph{.}}) to Stress},
+  author = {Herb Vandermeulen and Jolinne Surette and Marc A. Skinner},
+  date = {2012},
+  journaltitle = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  volume = {2011/095},
+  pages = {vi + 43 p},
+  file = {C\:\\Users\\cristianij\\Zotero\\storage\\87Y5BPJB\\Vandermeulen, Surette, Skinner_2012_Responses of Eelgrass (iZostera marina L.i) to stress.pdf},
+}
