--- a/03_results.Rmd
+++ b/03_results.Rmd
@@ -1,12 +1,17 @@
 # Results
 
-- A few sentences on the spatial distribution (e.g. more modifications in the south, more ag in south, more forestry in north).
+The spatial distribution of shoreline modifications varied across the region. Examples of the extent and diversity of modifications are shown in Figure \@ref(fig:exampleareas), and the full dataset is accessible online (see Data availability section). As expected, the seagrass meadows with the highest total levels of adjacent shoreline modification occurred near population centers (Figure \@ref(fig:percentmod)). The lowest levels of modification occurred near islands and in the northern part of the study area (i.e. Johnstone Strait). The dominant modification type tended to vary by latitude. For example, there is more coastal agriculture in the south and more logging in the north (Figure ).      
+
+(*TODO: make colors more bold in example figure.*)
+(*TODO: add cities and towns to overall figure*)
+(*TODO: do a full page figure for the 5 types. If these come after the total one, then I could try to fit them on one page.*)
+
 
 ```{r exampleareas, fig.pos="H", fig.cap = "Shoreline modifications within 100 meter buffered areas. The six selected areas are shown for example and do not imply any significance over other areas."}
 knitr::include_graphics(here::here("figures/02_shorelinemod_examples.png"))
 ```
 
 
-```{r percentmod, fig.pos="H", fig.cap = "The percentage of the shoreline buffer modified."}
+```{r percentmod, fig.pos="H", fig.cap = "The percentage of the shoreline buffered area that is modified."}
 knitr::include_graphics(here::here("figures/03_shorelinemod_percentage.png"))
 ```
